Update summary layout and add SVG icons

--- a/css/summary.css
+++ b/css/summary.css
@@ -91,5 +91,8 @@
 
 
 .summary_content_right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: lightblue;
 }
