--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
-  src: url("../assets/fonts/inter-v18-latin-regular.woff2") format("woff2");
+  src: url("./assets/fonts/inter-v18-latin-regular.woff2") format("woff2");
   /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
@@ -23,7 +23,7 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 700;
-  src: url("../assets/fonts/inter-v18-latin-700.woff2") format("woff2");
+  src: url("./assets/fonts/inter-v18-latin-700.woff2") format("woff2");
   /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
