--- a/css/summary.css
+++ b/css/summary.css
@@ -1,11 +1,12 @@
 .summary_container {
+    margin: 110px 96px;
     background-color: lightcoral;
 }
 
 .summary_wrapper {
-    height: calc(100vh - 96px);
+    /* height: calc(100vh - 96px); */
     background-color: lightgray;
-    padding: 64px 48px;
+    /* padding: 64px 48px; */
 }
 
 .summary_headline {
@@ -58,7 +59,20 @@
     gap: 28px;
 }
 
-.summary_content_left_top_wrapper div {
+.summary_button_width_264{
+    width: 264px;
+}
+.summary_button_width_560{
+    width: 560px;
+}
+.summary_button_width_168{
+    width: 168px;
+}
+
+.gap_16 {
+    gap: 16px;
+}
+/* .summary_content_left_top_wrapper div {
     width: 264px;
 }
 
@@ -68,7 +82,7 @@
 
 .summary_content_left_bottom_wrapper div {
     width: 168px;
-}
+} */
 
 
 .summary_buttons {
@@ -82,6 +96,9 @@
     border: 1px solid gray;
     border-radius: 25px;
 }
+
+
+
 
 
 
