The header has been updated to display the user icon conditionally based on the loginState. CSS update for Sidebar and Header => Sidebar left, header over the hole site with content wrapper 1440px

--- a/css/login.css
+++ b/css/login.css
@@ -28,6 +28,7 @@
   width: 100%;
   height: 100%;
   z-index: 10;
+  pointer-events: none;
   background-color: var(--animation-bg-color);
   animation: fadeOut 3s ease-in-out forwards;
   animation-delay: .5s;
