--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,8 @@
 .header {
-  height: 96px;
+  /* height: 96px; */
+  position: sticky;
+  top: 0;
+  z-index: 10;
   width: 100%;
   background-color: var(--white);
   box-shadow: 0 8px 8px -4px var(--style);
@@ -7,11 +10,9 @@
 }
 
 .header-content {
-  height: 96px;
+  /* height: 96px; */
   width: 100%;
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 30px 0 80px;
+  padding: 20px 40px 20px 116px;
   display: flex;
   justify-content: space-between;
   align-items: center;
