--- a/css/legal_notice.css
+++ b/css/legal_notice.css
@@ -1,7 +1,7 @@
 .legal_notice {
-  padding: 50px 96px;
-  overflow-y: auto;
-  height: 800px;
+  padding: 60px 96px;
+  /* overflow-y: auto; */
+  /* height: 800px; */
   background-color: var(--white);
   flex: 1;
 }
