--- a/css/privacy_policy.css
+++ b/css/privacy_policy.css
@@ -1,12 +1,7 @@
-.header {
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-
 .privacy_policy {
-  padding: 50px 96px;
-  height: 800px;
+  /* overflow-y: auto; */
+  padding: 60px 96px;
+  /* height: 800px; */
   background-color: var(--white);
   flex: 1;
 }
