--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
 .wrapper {
   width: 100%;
   max-width: 1440px;
+  margin: 0 auto;
 }
 
 .left {
@@ -93,6 +94,7 @@ body {
 .main {
   width: 100%;
   height: calc(100% - 96px);
+  overflow-y: auto;
 }
 
 /* Chrome, Edge, Safari */
