--- a/css/summary.css
+++ b/css/summary.css
@@ -104,10 +104,16 @@
 
     border: 1px solid gray;
     border-radius: 30px;
+
+    transition: 125ms;
 }
 
 .summary_buttons:hover {
     background-color: var(--primary-color);
+    color: var(--white);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    
 }
 
 .summary_bottons_amount_and_text_wrapper {
