--- a/css/add_task.css
+++ b/css/add_task.css
@@ -23,9 +23,20 @@
 }
 
 .form-column--left {
-    padding-right: 36px;
-    margin-right: 36px;
-    border-right: 1px solid #D1D1D1;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-column--right {
+    display: flex;
+    flex-direction: column;
+}
+
+.verticalline {
+    width: 1px;
+    background-color: #D1D1D1;
+    margin: 0 36px;
+    
 }
 
 .form-group {
@@ -42,6 +53,10 @@
     margin-bottom: 10px;
 }
 
+.required {
+    color: #FF8190;
+}
+
 .form-group .required {
     color: #FF8190;
     margin-left: 2px;
@@ -56,11 +71,56 @@
     font-weight: 400;
 }
 
-.form-group input[type="text"],
-.form-group input[type="date"],
-.form-group textarea,
-.form-group select{
+.input-default {
     font-family: "Inter", sans-serif;
+    color: black;
+    font-size: 20px;
+    line-height: 120%;
+    font-weight: 400;
+    padding: 12px 21px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 100%;
+    cursor: pointer;
+}
+
+.input-default::placeholder {
+    color: #D1D1D1;
+    opacity: 1;
+}
+
+.input-default:focus {
+    border-color: #29ABE2;
+    outline: none;
+}
+
+.input-custom-subtask {
+    font-family: "Inter", sans-serif;
+    color: black;
+    font-size: 20px;
+    line-height: 120%;
+    font-weight: 400;
+    padding: 16px 12px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 100%;
+    height: 48px;
+    cursor: pointer;
+}
+
+.input-custom-subtask::placeholder {
+    color: #D1D1D1;
+    opacity: 1;
+}
+
+.input-custom-subtask:focus {
+    border-color: #29ABE2;
+    outline: none;
+}
+
+.textarea-default {
+    font-family: "Inter", sans-serif;
+    color: black;
     font-size: 20px;
     line-height: 120%;
     font-weight: 400;
@@ -69,116 +129,27 @@
     border-radius: 10px;
 }
 
-.form-group input[type="text"]::placeholder,
-.form-group input[type="date"],
-.form-group textarea,
-.form-group select {
-    color: var(--primary-color);
-}
-
-#title::placeholder,
-#description::placeholder,
-#subtask-input::placeholder {
+.textarea-default::placeholder {
     color: #D1D1D1;
     opacity: 1;
 }
 
-
-.form-group input[type="text"]:focus,
-.form-group input[type="date"]:focus,
-.form-group textarea:focus,
-.form-group select:focus {
+.textarea-default:focus {
     border-color: #29ABE2;
     outline: none;
 }
 
-.select-single {
-    position: relative;
-    width: 100%;
-}
-
-.select-box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    background: #fff;
+.input-container input[type="date"]::-webkit-calendar-picker-indicator {
+    opacity: 0;
     cursor: pointer;
-    font-family: "Inter", sans-serif;
-    font-size: 20px;
-    line-height: 120%;
-    font-weight: 400;
-    padding-right: 8px;
+  }
+
+.due-date {
+    background: url(../assets/svg/add_task_calendar.svg);
+    background-repeat: no-repeat;
+    background-position: right 21px center;
 
 }
-
-.arrow-btn {
-    width: 32px;
-    height: 32px;
-    border: none;
-    background: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    transition: background 0.2s;
-    cursor: pointer;
-}
-
-.arrow-btn:hover {
-    background: rgba(0, 0, 0, 0.05);
-}
-
-.options-list {
-    position: absolute;
-    top: calc(100% + 4px);
-    left: 0;
-    width: 100%;
-    max-height: 200px;
-    overflow-y: auto;
-    background: #fff;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
-    display: none;
-    z-index: 20;
-}
-
-.options-list.show {
-    display: block;
-}
-
-.options-list li {
-    list-style: none;
-    padding: 12px 16px;
-    cursor: pointer;
-}
-
-.options-list li:hover {
-    background: rgba(0, 0, 0, 0.05);
-}
-
-.category-section {
-    padding: 8px 0px;
-    padding-left: 21px;
-    padding-right: 8px;
-    color: var(--primary-color);
-}
-
-#category {
-    padding-right: 40px;
-    background:
-        url('../assets/svg/arrow_dropdown_down.svg') no-repeat right 21px center;
-    appearance: none;
-}
-
-#category:focus {
-    background:
-        #fff url('../assets/svg/arrow_dropdown_up.svg') no-repeat right 21px center;
-    outline: none;
-}
-
 
 .priority-options {
     display: flex;
@@ -187,8 +158,9 @@
 
 .prio-btn {
     flex: 1;
-    padding: 10px;
-    min-width: 135px;
+    padding: 10px 16px;
+    height: 56px;
+    width: 136px;
     border: 1px solid #ccc;
     background: #fff;
     border-radius: 10px;
@@ -200,6 +172,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 100ms ease-in-out;
 }
 
 .prio-btn.selected {
@@ -239,165 +212,219 @@
     display: flex;
 }
 
-.subtasks-list {
-    list-style: none;
-    padding: 0;
-    margin: 0 0 0.5rem 0;
-}
-
-.subtasks-list li {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.25rem 0;
-    border-bottom: 1px solid #e0e0e0;
-}
-
-.subtask-input {
-    display: flex;
-    gap: 0.5rem;
-}
-
-.subtask-input input {
-    flex: 1;
-}
-
-.btn {
-    padding: 0.75rem 1.5rem;
-    border-radius: 10px;
-    font-size: 1rem;
-    cursor: pointer;
-}
-
-.btn-clear {
-    background: #fff;
-    border: 1px solid #333;
-    color: #333;
-    margin-right: 1rem;
-}
-
-.btn-primary {
-    background: #333;
-    color: #fff;
-    border: none;
-}
-
-.form-actions {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+.multiselect-container {
+    position: relative;
+    width: 100%;
 }
 
 .multiselect {
-    position: relative;
-    font-family: sans-serif;
     display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-}
-
-.selected-chips {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.5rem;
-
-}
-
-.chip {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.chip .avatar {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    font-weight: bold;
+    justify-content: space-between;
+    cursor: pointer;
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    line-height: 120%;
+    font-weight: 400;
+    color: black;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background: #fff;
+    height: 48px;
+    cursor: pointer;
+    padding: 16px 12px;
 }
 
-.select-box input[type="text"] {
+.multiselect-input {
+    cursor: pointer;
     border: none;
     outline: none;
-    flex: 1;
-    margin: 0;
-    border: unset;
-}
-
-.arrow {
-    margin-right: 10px;
-}
-
-.plus {
-    margin-right: 10px;
-}
-
-.checkboxes {
-    position: static;
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    line-height: 120%;
+    font-weight: 400;
+    color: black;
     width: 100%;
-    max-height: 200px;
-    overflow-y: auto;
-    border: 1px solid #ccc;
-    background: #fff;
-    border-radius: 4px;
-    display: none;
-    z-index: 10;
 }
 
-.checkboxes.show {
+.multiselect-input::placeholder {
+    color: black;
+}
+
+.multiselect-icon:hover {
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 50%;
+}
+
+.multiselect-options {
+    position: relative;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+}
+
+.multiselect-option {
+    cursor: pointer;
+    padding: 16px 12px;
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    line-height: 120%;
+    font-weight: 400;
+}
+
+.multiselect-option:hover {
+    background: rgba(0, 0, 0, 0.05);
+}
+
+
+.input-container {
+    position: relative;
+    width: 100%;
+}
+
+.buttons-box {
+    position: absolute;
+    top: 50%;
+    right: 0px;
+    padding-right: 12px;
+    transform: translateY(-50%);
+    display: flex;
+}
+
+.input-default-icon {
+    cursor: pointer;
+    position: static;
+    display: inline-flex
+;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    margin-left: 5px;
+    object-fit: scale-down;
+
+}
+
+.input-default-icon:hover {
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 50%;
+}
+
+.verticalline-subtask {
+    width: 1px;
+    background-color: #D1D1D1;
+    margin-left: 5px;
+    height: auto;
+}
+
+
+.form-actions-add-task {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.required-text {
+    display: flex;
+    align-items: flex-end;
+}
+.text {
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    line-height: 120%;
+    font-weight: 400;
+    color: black;
+}
+
+.form-action-buttons {
+    display: flex;
+    gap: 10px;
+    padding-right: 1px;
+}
+
+.button-clear {
+    cursor: pointer;
+    display: flex;
+    gap: 4px;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    color: black;
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    line-height: 120%;
+    font-weight: 400;
+    padding: 16px;
+    transition: all 100ms ease-in-out;
+}
+
+.button-clear:hover {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-color: #29ABE2;
+    color: #29ABE2;
+}
+
+.button-clear-img {
+    display: flex;
+    align-items: center;
+    
+}
+
+.button-clear:hover img.button-clear-hover-img {
     display: block;
 }
 
-.checkboxes .search {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 0.5rem;
-    border-bottom: 1px solid #ccc;
+.button-clear:hover img.button-clear-standard-img {
+    display: none;
 }
 
-.options-list {
-    max-height: 160px;
-    overflow-y: auto;
+.button-clear img.button-clear-hover-img {
+    display: none;
 }
 
-.option {
-    display: flex;
-    align-items: center;
-    padding: 0.5rem;
-    gap: 0.5rem;
+
+.button-create-task {
     cursor: pointer;
-}
-
-.option:hover {
-    background: #f0f0f0;
-}
-
-.option .avatar {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
     display: flex;
-    justify-content: center;
+    gap: 4px;
     align-items: center;
-    font-weight: bold;
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    color: white;
+    font-family: "Inter", sans-serif;
+    font-size: 21px;
+    line-height: 120%;
+    font-weight: 700;
+    padding: 16px;
+    transition: all 100ms ease-in-out;
 }
 
-.option input {
-    margin-left: auto;
+.button-create-task:hover {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    background-color: #29ABE2;
+    border-color: #29ABE2;
 }
 
-.select-box {
-    order: 0;
-}
 
-.checkboxes {
-    order: 1;
-}
 
-.selected-chips {
-    order: 2;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
