--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,6 @@
 }
 
 .header-content {
-  /* height: 96px; */
   width: 100%;
   padding: 20px 40px 20px 116px;
   display: flex;
@@ -23,20 +22,101 @@
   color: var(--black);
 }
 
-.header-user {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  border: 2px solid var(--black);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: 700;
-  color: var(--light-blue);
+.help-link img {
+  width: 32px;
+  height: 32px;
+
+  &:hover {
+    transform: scale(1.2);
+  }
 }
 
 .user-wrapper {
   display: flex;
   align-items: center;
   gap: 12px;
+}
+
+.user-button {
+  width: 56px;
+  height: 56px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 2px solid var(--black);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--light-blue);
+  cursor: pointer;
+  transition: all 0.125s ease-in-out;
+
+  &:hover {
+    background-color: var(--style);
+  }
+}
+
+/* .wrapper-user-menu {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  height: 100vh;
+  position: relative;
+} */
+
+.user-menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  background-color: transparent;
+  z-index: 10;
+  overflow-x: hidden;
+
+}
+
+.user-menu-overlay.hidden {
+  display: none;
+}
+
+.user-menu {
+  position: absolute;
+  top: 96px;
+  right: -170px;
+  background-color: var(--primary-color);
+  font-size: 16px;
+  border-radius: 20px 0 20px 20px;
+  padding: 24px 26px;
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  transition: all 0.125s ease-in-out;
+
+  &.show {
+    right: 16px;
+  }
+
+  & a {
+    color: var(--white);
+
+    &:hover {
+      color: var(--light-blue);
+    }
+  }
+
+  & .logout-btn {
+    background-color: transparent;
+    color: var(--white);
+    border: none;
+    display: flex;
+    font-size: 16px;
+    cursor: pointer;
+
+    &:hover {
+      color: var(--light-blue);
+    }
+  }
 }
