--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -25,7 +25,7 @@
   gap: 12px;
   padding: 12px 40px;
   text-decoration: none;
-  color: var(--white);
+  color: var(--light-gray);
   font-size: 16px;
   transition: background-color 0.2s, color 0.2s;
 }
@@ -40,11 +40,11 @@
   color: var(--white);
 }
 
-.sidebar-link svg {
+/* .sidebar-link img {
   fill: var(--white);
   width: 24px;
   height: 24px;
-}
+} */
 
 .sidebar-footer {
   display: flex;
@@ -62,4 +62,16 @@
 
 .sidebar-footer a:hover {
   color: var(--white);
+}
+
+/* Footer-Nav */
+
+.footer-nav-cnt {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  /* height: 100vh; */
+  background-color: var(--primary-color);
+  /* font-family: "Inter", sans-serif; */
 }
