--- a/css/add_task.css
+++ b/css/add_task.css
@@ -468,6 +468,20 @@
     transition: all 100ms ease-in-out;
 }
 
+.button-create-task:disabled {
+    background-color: #D1D1D1;
+    border-color: #D1D1D1;
+    color: white;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
+.button-create-task:disabled:hover {
+    box-shadow: none;
+    background-color: #D1D1D1;
+    border-color: #D1D1D1;
+}
+
 .button-create-task:hover {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     background-color: #29ABE2;
