--- a/css/add_task.css
+++ b/css/add_task.css
@@ -361,8 +361,7 @@
 .input-default-icon {
     cursor: pointer;
     position: static;
-    display: inline-flex
-;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 24px;
@@ -384,6 +383,57 @@
     height: auto;
 }
 
+.subtask-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.subtask-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4px 16px;
+    transition: background-color 0.3s ease;
+}
+
+.subtask-item:hover {
+    background-color: #EEEEEE;
+}
+
+.subtask-actions {
+    display: flex;
+    gap: 8px;
+}
+
+.subtask-action-icon {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.subtask-action-icon:hover {
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 50%;
+}
+
+.subtask-edit {
+    font-family: "Inter", sans-serif;
+    color: black;
+    font-size: 20px;
+    line-height: 120%;
+    font-weight: 400;
+    padding: 4px 16px;
+    border: none;
+    border-bottom: 1px solid #29ABE2;
+    width: 100%;
+    cursor: pointer;
+    outline: none;
+}
+
+.input-container.edit {
+    margin-top: 10px;
+}
 
 .form-actions-add-task {
     width: 100%;
