--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -31,7 +31,7 @@
 }
 
 .sidebar-link:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--nav-hover);
   color: var(--white);
 }
 
@@ -67,11 +67,64 @@
 /* Footer-Nav */
 
 .footer-nav-cnt {
+  display: none;
+  width: 100%;
+  background-color: var(--primary-color);
+}
+
+.footer-nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+
+}
+
+.footer-nav-link-cnt {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 100%;
-  /* height: 100vh; */
-  background-color: var(--primary-color);
-  /* font-family: "Inter", sans-serif; */
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+
+  & img {
+    width: 32px;
+    aspect-ratio: 1/1;
+  }
+}
+
+.footer-nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 80px;
+  min-height: 76px;
+  border-radius: 16px;
+  /* gap: 8px; */
+  padding: 16px 0px;
+  text-decoration: none;
+  color: var(--light-gray);
+  font-size: 16px;
+  transition: background-color 0.2s, color 0.2s;
+
+  &:hover {
+    background-color: var(--nav-hover);
+    color: var(--white);
+  }
+
+  &.active {
+    background-color: var(--active);
+    color: var(--white);
+  }
+}
+
+
+@media (max-width: 768px) {
+  .left {
+    display: none;
+  }
+
+  .footer-nav-cnt {
+    display: flex;
+  }
 }
