Add hover effects for the Todo and Done icons and clean up the code

--- a/css/summary.css
+++ b/css/summary.css
@@ -105,6 +105,12 @@
     
 }
 
+
+.summary_buttons:hover .todo_icon {
+    content: url('./assets/svg/summary-icon.svg');
+}
+
+
 .summary_bottons_amount_and_text_wrapper {
     display: flex;
     flex-direction: column;
