--- a/css/board.css
+++ b/css/board.css
@@ -1,6 +1,7 @@
 .main-board {
     width: 100%;
     height: 100%;
+    background-color: #F6F7F8;
     display: flex;
     flex-direction: column;
 }
@@ -27,6 +28,7 @@
 
 .board-search div h1 {
     font-size: 61px;
+    color: var(--primary-color);
 }
 
 .tasks-board {
@@ -48,22 +50,112 @@
     justify-content: space-between;
 }
 
-.task-board div h3 {
+.task-board h3 {
     font-size: 20px;
+    color: var(--primary-color);
 }
 
-.task-board button {
+.button-board {
     width: 24px;
     height: 24px;
-    background-image: url("../assets/svg/plus_button_board.svg");
+    color: var(--primary-color);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     border: none;
+    background-color: white;
+}
+
+.button-board:hover {
+    color: var(--secondary-color);
     cursor: pointer;
 }
 
 .column-divs {
+    width: 1208px;
     display: flex;
     flex-direction: row;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 64px;
+    padding-right: 64px;
+}
+
+.columns {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.task-main {
+    width: 252px;
+    height: auto;
+    border-radius: 24px;
+    gap: 24px;
+    padding: 16px;
+    background-color: var(--white);
+}
+
+.category-board {
+    display: inline-block;
+    height: 27px;
+    color: var(--white);
+    border-radius: 8px;
+    padding-top: 4px;
+    padding-right: 16px;
+    padding-bottom: 4px;
+    padding-left: 16px;
+}
+
+.title-description-board{
+    width: 220px;
+    height: auto;
+    gap: 8px;
+}
+
+.title-board {
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--primary-color);
+}
+
+.description-board {
+    width: 220px;
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--icons);
+}
+
+.subtasks-board{
+    width: 220px;
+    height: 16px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.subtasks-board div h4 {
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.initials-priority_board {
+    width: 220px;
+    height: 32px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.initials-board {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.priority-board {
+    height: 32px;
+    width: 32px;
 }
