--- a/css/summary.css
+++ b/css/summary.css
@@ -1,74 +1,74 @@
 .summary_container {
-    margin: 110px 96px;
+  margin: 110px 96px;
 }
 
 .summary_headline {
-    display: flex;
-    align-items: center;
-    gap: 32px;
-    padding-bottom: 32px;
+  display: flex;
+  align-items: center;
+  gap: 32px;
+  padding-bottom: 32px;
 }
 
 .summary_headline_title {
-    font-weight: 700;
-    font-size: 61px;
+  font-weight: 700;
+  font-size: 61px;
 }
 
 .summary_headline_line {
-    height: 59px;
-    width: 4px;
-    background-color: var(--light-blue);
-    border-radius: 3px;
+  height: 59px;
+  width: 4px;
+  background-color: var(--light-blue);
+  border-radius: 3px;
 }
 
 .summary_headline span {
-    font-weight: 400;
-    font-size: 27px;
+  font-weight: 400;
+  font-size: 27px;
 }
 
 .summary_content {
-    display: flex;
+  display: flex;
 }
 
 .summary_content_left,
 .summary_content_right {
-    flex: 1;
+  flex: 1;
 }
 
 .summary_content_left {
-    max-width: 560px;
-    display: flex;
-    flex-direction: column;   
-    gap: 28px;
+  max-width: 560px;
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
 }
 
 .summary_content_left_top_wrapper,
 .summary_content_left_middle_wrapper,
 .summary_content_left_bottom_wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 28px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 28px;
 }
 
-.summary_button_width_264{
-    width: 264px;
+.summary_button_width_264 {
+  width: 264px;
 }
 
-.summary_button_width_560{
-    width: 560px;
+.summary_button_width_560 {
+  width: 560px;
 }
 
-.summary_button_width_168{
-    width: 168px;
+.summary_button_width_168 {
+  width: 168px;
 }
 
 .gap_16 {
-    gap: 16px;
+  gap: 16px;
 }
 
 .padding_28_48 {
-    padding: 28px 48px;
+  padding: 28px 48px;
 }
 /* .summary_content_left_top_wrapper div {
     width: 264px;
@@ -82,49 +82,60 @@
     width: 168px;
 } */
 
-
 .summary_buttons {
-    display: flex;
-    /* flex: 1; */
-    height: 168px;
+  display: flex;
+  /* flex: 1; */
+  height: 168px;
 
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
 
-    border: 1px solid gray;
-    border-radius: 30px;
+  border: 1px solid gray;
+  border-radius: 30px;
 
-    transition: 125ms;
+  transition: 125ms;
 }
 
 .summary_buttons:hover {
-    background-color: var(--primary-color);
-    color: var(--white);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    
+  background-color: var(--primary-color);
+  color: var(--white);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+
+  & .hover-white {
+    /* Alexander hat es hinzugefügt um das Problem mit dem Hover der Icons zu beheben. Entsprechende CSS-Klassen sind in den SVGs im Template definiert. Du kannst es rauslöschen, wenn du es anders lösen möchtest. */
+    fill: white;
+  }
+
+  & .hover-main-color {
+    fill: var(--primary-color);
+  }
+
+  & .hover-stroke-main-color {
+    stroke: var(--primary-color);
+  }
 }
 
 .summary_image_wrapper {
-    height: 70px;
-    width: 70px;
+  height: 70px;
+  width: 70px;
 }
 
 .summary_bottons_amount_and_text_wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .summary_amount_font_weight_and_size {
-    font-weight: 600;
-    font-size: 64px;
+  font-weight: 600;
+  font-size: 64px;
 }
 
 .summary_text_font_weight_and_size {
-    font-weight: 400;
-    font-size: 20px;
-    text-align: center;
+  font-weight: 400;
+  font-size: 20px;
+  text-align: center;
 }
 
 /* .summary_buttons_top {
@@ -132,66 +143,66 @@
 } */
 
 .summary_urgent_wrapper {
-    display: flex;
-    height: 100%;
-    width: 100%;
-    /* justify-content: space-between; */
+  display: flex;
+  height: 100%;
+  width: 100%;
+  /* justify-content: space-between; */
 }
 
 .summary_urgent_left {
-    display: flex;
-    align-items: center;
-    flex: 0.85;
+  display: flex;
+  align-items: center;
+  flex: 0.85;
 }
 
-.summary_urgent_left img{
-    height: 70px;
-    width: 70px;
+.summary_urgent_left img {
+  height: 70px;
+  width: 70px;
 }
 
 .summary_urgent_line {
-    margin: 33px 0;
-    /* height: 102px; */
-    width: 2px;
-    background-color: var(--style);
+  margin: 33px 0;
+  /* height: 102px; */
+  width: 2px;
+  background-color: var(--style);
 }
 
 .summary_urgent_text_wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 13px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 13px;
 }
 
 .summary_urgent_text_date {
-    font-weight: 700;
-    font-size: 21px;
+  font-weight: 700;
+  font-size: 21px;
 }
 
 .summary_urgent_text_info {
-    font-weight: 400;
-    font-size: 16px;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 .summary_content_right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .summary_content_right_wrapper {
-    display: flex;
-    flex-direction: column;
-    padding: 16px;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
 }
 
 .summary_content_right_greeting {
-    font-weight: 500;
-    font-size: 47px;
+  font-weight: 500;
+  font-size: 47px;
 }
 
 .summary_content_right_user {
-    font-weight: 700;
-    font-size: 64px;
-    color: var(--light-blue);
+  font-weight: 700;
+  font-size: 64px;
+  color: var(--light-blue);
 }
