--- a/css/board.css
+++ b/css/board.css
@@ -31,6 +31,32 @@
     color: var(--primary-color);
 }
 
+.add-task-board {
+    width: 160px;
+    height: 48px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    background-color: var(--primary-color);
+    padding: 8px 16px;
+    gap: 4px;
+    border: 1px;
+}
+
+.add-task-board h2 {
+    font-weight: 700;
+    font-size: 21px;
+    color: var(--white);
+}
+
+.add-task-board:hover{
+    background-color: var(--secondary-color);
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 2.56251px 2.56251px 0px;
+}
+
 .tasks-board {
     width: 1208px;
     height: 72px;
@@ -75,9 +101,7 @@
     width: 1208px;
     display: flex;
     flex-direction: row;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    gap: 26px;
     padding-left: 64px;
     padding-right: 64px;
 }
@@ -91,14 +115,15 @@
 .task-main {
     width: 252px;
     height: auto;
+    display: flex;
+    flex-direction: column;
     border-radius: 24px;
-    gap: 24px;
     padding: 16px;
     background-color: var(--white);
 }
 
 .category-board {
-    display: inline-block;
+    width: fit-content;
     height: 27px;
     color: var(--white);
     border-radius: 8px;
@@ -106,12 +131,14 @@
     padding-right: 16px;
     padding-bottom: 4px;
     padding-left: 16px;
+    margin-bottom: 24px;
 }
 
 .title-description-board{
     width: 220px;
     height: auto;
     gap: 8px;
+    margin-bottom: 24px;
 }
 
 .title-board {
@@ -134,6 +161,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 24px;
 }
 
 .subtasks-board div h4 {
@@ -147,12 +175,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .initials-board {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
 }
 
 .priority-board {
