--- a/css/summary.css
+++ b/css/summary.css
@@ -70,21 +70,9 @@
 .padding_28_48 {
   padding: 28px 48px;
 }
-/* .summary_content_left_top_wrapper div {
-    width: 264px;
-}
-
-.summary_content_left_middle_wrapper div {
-    width: 560px;
-}
-
-.summary_content_left_bottom_wrapper div {
-    width: 168px;
-} */
 
 .summary_buttons {
   display: flex;
-  /* flex: 1; */
   height: 168px;
 
   align-items: center;
@@ -101,19 +89,18 @@
   color: var(--white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+}
 
-  & .hover-white {
-    /* Alexander hat es hinzugefügt um das Problem mit dem Hover der Icons zu beheben. Entsprechende CSS-Klassen sind in den SVGs im Template definiert. Du kannst es rauslöschen, wenn du es anders lösen möchtest. */
-    fill: white;
-  }
+.summary_buttons:hover .circle {
+    fill: var(--white);
+}
 
-  & .hover-main-color {
+.summary_buttons:hover .icon_path_fill {
     fill: var(--primary-color);
-  }
+}
 
-  & .hover-stroke-main-color {
+.summary_buttons:hover .icon_path_stroke {
     stroke: var(--primary-color);
-  }
 }
 
 .summary_image_wrapper {
@@ -138,15 +125,10 @@
   text-align: center;
 }
 
-/* .summary_buttons_top {
-    width: 264px;
-} */
-
 .summary_urgent_wrapper {
   display: flex;
   height: 100%;
   width: 100%;
-  /* justify-content: space-between; */
 }
 
 .summary_urgent_left {
@@ -162,7 +144,6 @@
 
 .summary_urgent_line {
   margin: 33px 0;
-  /* height: 102px; */
   width: 2px;
   background-color: var(--style);
 }
