--- a/css/header.css
+++ b/css/header.css
@@ -1,12 +1,13 @@
 .header {
-  /* height: 96px; */
-  position: sticky;
+  position: fixed;
   top: 0;
-  z-index: 10;
-  width: 100%;
+  left: 0;
+  width: 100vw;
+  height: 96px;
   background-color: var(--white);
   box-shadow: 0 8px 8px -4px var(--style);
   font-family: "Inter", sans-serif;
+  z-index: 100;
 }
 
 .header-content {
