--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@
   --nav-hover: rgba(255, 255, 255, 0.1);
   --active: #090131;
   --no-task-bg: #E7E7E7;
-  --technical:#1FD7C1;
-  --user:#0038FF;
+  --technical: #1FD7C1;
+  --user: #0038FF;
   --header-padding: 20px 40px 20px 116px;
 }
 
@@ -79,21 +79,27 @@ body {
 }
 
 .left {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 232px;
+  height: 100vh;
+  z-index: 200;
   background-color: var(--primary-color);
   color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 32px 0;
+  padding-top: 50px;
   flex: 0 0 232px;
 }
 
 .right {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
-  /* min-width: 0; */
+  padding-top: 96px;
+  margin-left: 232px;
   position: relative;
 }
 
