--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,10 +1,6 @@
 .sidebar {
-  position: fixed;
-  top: 0px;
-  left: 0;
-  width: 232px;
+  width: 194px;
   height: 100vh;
-  z-index: 50;
   background-color: var(--primary-color);
   display: flex;
   flex-direction: column;
@@ -15,6 +11,7 @@
 .sidebar-logo {
   display: flex;
   justify-content: center;
+  margin: 32px 0;
 }
 
 .sidebar-nav {
