--- a/css/contact.css
+++ b/css/contact.css
@@ -199,6 +199,25 @@
 }
 
 /* Contact‑Information */
+#edit-avatar-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.avatar-circle {
+  width: 94px;
+  height: 94px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 48px;
+  color: white;
+  background-color: hsl(var(--avatar-hue), 70%, 50%);
+}
+
 .detail-info h3 {
   margin-bottom: 24px;
   color: var(--active);
@@ -209,6 +228,7 @@
   margin: 0;
   line-height: 2;
 }
+
 
 .contact-detail {
   position: relative;
