--- a/css/summary.css
+++ b/css/summary.css
@@ -88,6 +88,7 @@
   background-color: var(--primary-color);
   color: var(--white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  scale: 1.05;
   cursor: pointer;
 }
 
@@ -174,7 +175,7 @@
 .summary_content_right_wrapper {
   display: flex;
   flex-direction: column;
-  padding: 16px;
+  padding: 16px 32px;
 }
 
 .summary_content_right_greeting {
