--- a/css/privacy_policy.css
+++ b/css/privacy_policy.css
@@ -1,15 +1,26 @@
 .privacy_policy {
   /* overflow-y: auto; */
-  padding: 60px 96px;
+  padding: var(--main-padding);
   /* height: 800px; */
   flex: 1;
+}
+
+h1 {
+  font-size: var(--h1-help-privacy-legal);
+}
+
+h2 {
+  font-size: var(--h2-help-privacy-legal);
+}
+
+h3 {
+  font-size: var(--h3-help-privacy-legal);
 }
 
 h1 {
   color: var(--primary-color);
   font-weight: bold;
   padding-bottom: 16px;
-  font-size: 52px;
 }
 
 h2,
