--- a/css/help.css
+++ b/css/help.css
@@ -1,60 +1,71 @@
 .help {
-    padding: 60px 96px;
+  padding: var(--main-padding);
+}
+
+h1 {
+  font-size: var(--h1-help-privacy-legal);
+}
+
+h2 {
+  font-size: var(--h2-help-privacy-legal);
+}
+
+h3 {
+  font-size: var(--h3-help-privacy-legal);
 }
 
 .display_none {
-    display: none;
+  display: none;
 }
 
 .header_help {
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 28px;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 28px;
+  align-items: center;
 }
 
 .heading_help {
-    font-size: 61px;
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .text {
-    font-size: 16px;
-    font-weight: 400;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .subheading_help {
-    font-size: 27px;
-    font-weight: 700;
+  font-size: 27px;
+  font-weight: 700;
 }
 
 .steps_use_join {
-    display: flex;
-    gap: 35px;
+  display: flex;
+  gap: 35px;
 }
 
 .subheading2_help {
-    font-size: 20px;
-    font-weight: 700;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .step_use_join {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .help_text {
-    display: flex;
-    gap: 24px;
-    flex-direction: column;
+  display: flex;
+  gap: 24px;
+  flex-direction: column;
 }
 
 .explanation_join {
-    display: flex;
-    gap: 16px;
-    flex-direction: column;
+  display: flex;
+  gap: 16px;
+  flex-direction: column;
 }
 
 .blue {
-    color: var(--light-blue);
+  color: var(--light-blue);
 }
