--- a/css/board.css
+++ b/css/board.css
@@ -47,6 +47,7 @@
     font-size: 20px;
     font-weight: 400;
     color: var(--style);
+    outline: none;
 }
 
 .search-board:focus {
@@ -133,6 +134,10 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+}
+
+.columns-highlight {
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .task-main {
