--- a/css/board.css
+++ b/css/board.css
@@ -264,6 +264,25 @@
     flex-direction: row;
 }
 
+.initials-single-board {
+    width: 32px;
+    height: 32px;
+    border-radius: 32px;
+    border: solid 1px var(--white);
+    background-color: var(--secondary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -10px;
+}
+
+.initials-single-board h3 {
+    font-family: inter;
+    font-weight: 400;
+    font-size: 12px;
+    color: var(--white);
+}
+
 .priority-board {
     height: 32px;
     width: 32px;
