--- a/style.css
+++ b/style.css
@@ -143,8 +143,8 @@ body {
   top: 10px;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: var(--white);
+  height: calc(100% - 10px);
+  background-color: var(--main-bg);
   display: flex;
   opacity: 1;
   justify-content: center;
