add_task update

--- a/css/add_task.css
+++ b/css/add_task.css
@@ -458,7 +458,7 @@ html, body {
 .form-actions-add-task {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 .required-text {
